--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     </div>
 
-
+<a href="https://yllix.com/publishers/285686" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_zecyzp.png" width="300" height="250" border="0" alt="Monetize your website traffic with yX Media" title="Monetize your website traffic with yX Media" /></a>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
