--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
 
 
     </div>
-
-<a href="https://yllix.com/publishers/285686" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_zecyzp.png" width="300" height="250" border="0" alt="Monetize your website traffic with yX Media" title="Monetize your website traffic with yX Media" /></a>
-
+    <center>
+        <!--Iklan 1-->
+         <a href="https://yllix.com/publishers/285686" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_zecyzp.png" width="300" height="250" border="0" alt="Monetize your website traffic with yX Media" title="Monetize your website traffic with yX Media" /></a>
+        <!--Iklan 2-->
+         <a href="https://yllix.com/publishers/285686" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_s9c2nm.png" width="300" height="250" border="0" alt="Monetize your website traffic with yX Media" title="Monetize your website traffic with yX Media" /></a>
+        <!-- Iklan 3-->
+         <a href="https://yllix.com/publishers/285686" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_7nc2s6.png" width="300" height="250" border="0" alt="yX Media - Monetize your website traffic with us" title="yX Media - Monetize your website traffic with us" /></a>
+    </center>
+        
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
